Update title for building data collection

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bina Veri Toplama</title>
+    <title>Betonarme Bina Veri Toplama</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
@@ -271,7 +271,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🏢 Bina Veri Toplama</h1>
+            <h1>🏢 Betonarme Bina Veri Toplama</h1>
             <p>Saha Veri Toplama Sistemi</p>
         </div>
         
